crates/math-core/tests/snapshots/conversion_test__sine_sine.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\sin x"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mrow>
            <mrow><mspace/><mi>sin</mi></mrow>
            <mo lspace="0.1667em">&ApplyFunction;</mo>
            <mi>x</mi>
        </mrow>
    </mrow>
</math>
