crates/math-core/tests/snapshots/conversion_test__sine_with_displaylimits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\displaylimits_0^1"
---
<math>
    <msubsup>
        <mo lspace="0" rspace="0">sin</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
</math>
