crates/math-core/tests/snapshots/conversion_test__sine_with_mathbin.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\mathbin\\sin b"
---
<math>
    <mi>a</mi>
    <mpadded style="padding-left:0.2222em;padding-right:0.2222em;">
        <mrow><mspace/><mi>sin</mi></mrow>
    </mpadded>
    <mi>b</mi>
</math>
