crates/math-core/tests/snapshots/conversion_test__single_variable.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x
---
<math>
    <mi>x</mi>
</math>
