crates/math-core/tests/snapshots/conversion_test__slashed.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\slashed{\\partial}"
---
<math>
    <mrow><mspace/><mi>∂̸</mi></mrow>
</math>
