crates/math-core/tests/snapshots/conversion_test__slightly_more_complex_fraction.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\frac{12}{5}"
---
<math>
    <mfrac>
        <mn>12</mn>
        <mn>5</mn>
    </mfrac>
</math>
