crates/math-core/tests/snapshots/conversion_test__sqrt_equal_three.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt{=3}"
---
<math>
    <msqrt>
        <mrow>
            <mo lspace="0">=</mo>
            <mn>3</mn>
        </mrow>
    </msqrt>
</math>
