crates/math-core/tests/snapshots/conversion_test__sqrt_log_braces.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt{\\log}"
---
<math>
    <msqrt>
        <mrow><mspace/><mi>log</mi></mrow>
    </msqrt>
</math>
