crates/math-core/tests/snapshots/conversion_test__sqrt_sum.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt\\sum"
---
<math>
    <msqrt>
        <mo>∑</mo>
    </msqrt>
</math>
